--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,4 +32,4 @@ jobs:
           push: true
           tags: |
             diogoss/hydravim:latest
-            diogoss/hydravim:${{ github.run_number }}-$(date +%s)
+            diogoss/hydravim:$(date +%s)
